# build_kernel

./: .gitignore  README.md  build.sh  config.env  config.py  pyproject.toml  settings.conf
build_kernel/: __init__.py  __main__.py  builder.py  main.py
build_kernel/utils/: ak3.py  arch.py  cc.py  config.py  device.py  dumpvars.py  info.py  logging.py  make.py  toolchain.py
configs/: X00H  X00I  X00P  X00R  asus-msm8937-3.18  platina-4.14  platina-4.4  whyred-4.14  whyred-4.4  xiaomi-sdm660-4.14  xiaomi-sdm660-4.19  xiaomi-sdm660-4.4
configs/asus/X00H/: 3.18
configs/asus/X00I/: 3.18
configs/asus/X00P/: 3.18
configs/asus/X00R/: 3.18
configs/asus/msm8937-common/: 3.18
configs/examples/: example
configs/lenovo/: kunlun2
configs/xiaomi/lavender/: 4.4
device/asus/: X00H.py  X00I.py  X00P.py  X00R.py  msm8937.py
device/examples/: example.py
device/google/: mainline_gki_x86_64.py
device/lenovo/: jd2019.py  kunlun2.py  sdm710.py
device/msft/: talkman.py
device/qcom/: common.py  msm8916.py  msm8996.py  msm8998.py  sdm845.py  sm8150.py  sm8250.py
device/samsung/: j5nlte.py  msm8916.py
device/xiaomi/: alioth.py  andromeda.py  apollo.py  cas.py  cepheus.py  cmi.py  crux.py  dagu.py  elish.py  enuma.py  grus.py  lavender.py  lmi.py  mido.py  mikona_a.py  mikona_vab.py  monet.py  msm8953.py  munch.py  nabu.py  picasso.py  platina.py  psyche.py  pyxis.py  raphael.py  sdm660.py  sdm710.py  sirius.py  sm8150.py  sm8250.py  thyme.py  tissot.py  umi.py  vangogh.py  vayu.py  vela.py  vince.py  whyred.py
tools/: functions.sh  variables.sh
(+13 files in other folders)
