[tool.poetry]
name = "build_kernel"
version = "1.2.0"
description = "Linux kernel building script"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/build_kernel"

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
